<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_back"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space20"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/shipment_confirmed"
            android:textColor="@color/skyblue"
            android:textSize="17sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space20"
            android:src="@drawable/ic_check_mark"
            android:tint="@color/skyblue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space20"
            android:text="@string/success"
            android:textColor="@color/skyblue"
            android:textSize="17sp" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textBalck16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space10"
            android:gravity="center_horizontal"
            android:text="@string/your_shipment_has_been_processed_please_nreview_your_details_in_history" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            style="@style/textWhitGray16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/space30"
            android:layout_marginBottom="@dimen/space20"
            android:background="@drawable/btn_bac"
            android:text="@string/view_details"
            android:textAllCaps="false" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>