<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:orientation="vertical"
    tools:context=".Fragments.SettingFragment">

    <include layout="@layout/topbar1" />

    <RelativeLayout
        android:id="@+id/termsandcondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/space10">

            <TextView
                android:id="@+id/term_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/space16"
                android:text="@string/termandcondition"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text16"
                android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space20"
            android:layout_height="@dimen/space20"
            android:src="@drawable/ic_arrow"
            android:layout_marginRight="@dimen/space5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/space10">

        <TextView
            android:id="@+id/privarcy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/space16"
            android:text="@string/privarcypolicy"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space20"
            android:layout_height="@dimen/space20"
            android:src="@drawable/ic_arrow"
            android:layout_marginRight="@dimen/space5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/space10">

        <TextView
            android:id="@+id/data_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/space16"
            android:text="@string/dataprovider"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space20"
            android:layout_height="@dimen/space20"
            android:src="@drawable/ic_arrow"
            android:layout_marginRight="@dimen/space5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/space10">

        <TextView
            android:id="@+id/software_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/space16"
            android:text="@string/softwarelicence"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space20"
            android:layout_height="@dimen/space20"
            android:src="@drawable/ic_arrow"
            android:layout_marginRight="@dimen/space5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/space10">

        <TextView
            android:id="@+id/location_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/space16"
            android:text="@string/locationinformation"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space20"
            android:layout_height="@dimen/space20"
            android:src="@drawable/ic_arrow"
            android:layout_marginRight="@dimen/space5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />

</LinearLayout>